Fix: arrumado estilização dos cards para deixalos com tamanho padrão melhor, tabela mais bonita e quebra de linha para não ocorrer overflow e navegação centrada. Feat: adicionado input para pesquisa de algum item da lista pelo titulo.

--- a/prova_suficiencia/css/style.css
+++ b/prova_suficiencia/css/style.css
@@ -12,3 +12,9 @@ table th, table td {
     background-color: black !important;
     color: white !important;
 }
+
+td {
+    word-break: break-word;
+    white-space: normal;
+    max-width: 250px;
+}
